tests/fixtures/invalid/pow_str_set_str.py
# Cannot call pow() with Str, Set[int], Str
x = pow("hello", {1, 2, 3}, "hello")
